--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-vector-icons": "^10.2.0",
