--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-native": "0.80.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-markdown-display": "^7.0.2",
+    "react-native-piano": "^1.0.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
+    "react-native-sound": "^0.12.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.15.0",
     "react-native-youtube-iframe": "^2.4.1"
