--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-sound": "^0.12.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-vision-camera": "^4.7.1",
     "react-native-webview": "^13.15.0",
     "react-native-youtube-iframe": "^2.4.1"
   },
