--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 OPENAI_CHAT_API_URL=https://api.lenguyenbaolong.art/api/v1/chats_openai/07e10f265e6411f0ae912ec3e04057e5/chat/completions
 
-API_BASE_URL=http://10.0.2.2:8000/api/v1
+# Local API URL for development
+# API_BASE_URL=http://10.0.2.2:8000/api/v1
+
+# Deployed API URL
+API_BASE_URL=http://music4youapi.asfastapi.io.vn/api/v1
